# n0-snafu

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  cleanup.yaml  docs.yaml  tests.yaml
pr/11/docs/n0_snafu/: index.html
pr/12/docs/n0_snafu/: enum.Error.html  index.html  macro.format_err.html
pr/13/docs/: search-index.js
pr/14/docs/n0_snafu/: struct.SpanTrace.html
pr/15/docs/n0_snafu/: enum.Error.html  index.html  macro.format_err.html  struct.ErrorLayer.html  struct.SpanTrace.html  trait.ResultExt.html  type.Result.html
pr/16/docs/n0_snafu/: enum.Error.html  index.html  trait.ResultExt.html  type.Result.html
pr/17/docs/n0_snafu/: all.html  macro.format_err.html
pr/2/docs/n0_snafu/: all.html  enum.Error.html  index.html  macro.format_err.html  struct.ErrorLayer.html  trait.ResultExt.html  type.Result.html
pr/3/docs/: search-index.js  src-files.js
pr/3/docs/n0_snafu/: all.html  enum.TestError.html  index.html  sidebar-items.js  struct.SpanTrace.html  trait.TestResultExt.html  type.TestResult.html
pr/4/docs/: help.html
pr/4/docs/n0_snafu/: all.html  enum.Error.html  trait.ResultExt.html
pr/5/docs/: settings.html
pr/5/docs/n0_snafu/: enum.Error.html  index.html  macro.format_err.html  struct.ErrorLayer.html  struct.SpanTrace.html  type.Result.html
pr/6/docs/: crates.js
pr/6/docs/n0_snafu/: type.Result.html
pr/7/docs/n0_snafu/: enum.Error.html
pr/9/docs/: src-files.js
pr/9/docs/n0_snafu/: struct.ErrorLayer.html  struct.SpanTrace.html
src/: error.rs  lib.rs  report.rs  spantrace.rs  testerror.rs
(+46 files in other folders)
