[package]
name = "n0-snafu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
btparse = "0.2.0"
color-backtrace = { version = "0.7.0", features = ["use-btparse-crate"] }
snafu = { version = "0.8.5", features = ["rust_1_61", "rust_1_81", "std", "backtraces-impl-backtrace-crate"] }
